--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -34,5 +34,5 @@
   {% if author.codepen %}<a href="http://codepen.io/{{ author.codepen }}" class="author-social" target="_blank"><i class="fa fa-fw fa-codepen"></i> CodePen</a>{% endif %}
   {% if author.bitbucket %}<a href="https://bitbucket.org/{{ author.bitbucket }}" class="author-social" target="_blank"><i class="fa fa-fw fa-bitbucket"></i> BitBucket</a>{% endif %}
   {% if author.cv %}<a href="https://goo.gl/{{ author.cv }}" class="author-social" target="_blank"><i class="fa fa-fw fa-file-pdf-o"></i> CV</a>{% endif %}
-  {% if author.coursera %}<a href="https://www.coursera.org/user/i/{{ author.coursera }}" class="author-social" target="_blank"><i class="fa fa-fw fa-graduation-cap"></i> Coursera</a>{% endif %}
+  {% if author.coursera %}<a href="https://www.coursera.org/user/{{ author.coursera }}" class="author-social" target="_blank"><i class="fa fa-fw fa-graduation-cap"></i> Coursera</a>{% endif %}
 </div>
